# CellularAutomata

./: .doxygen  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  config  readme.md  vs.code-workspace
.github/: readme.md
.github/workflows/: doxygen.yml
CellularAutomata/: CMakeLists.txt  CellularAutomata.hpp  CellularAutomata.inl  activations.hpp  activations.inl  common.hpp  common.inl  cpu.hpp  cuda.cuh  cuda.inl  kernels.hpp  kernels.inl  rng.inl  states.hpp  states.inl
CellularAutomata/include/: CellularAutomata  CellularAutomata.h  activations.h  backend_base.h  backend_cuda.h  common.h  kernels.h  rng.h  states.h
CellularAutomata/include/core/: common.hpp  common.inl  cpu.hpp  cpu.inl  epoch.hpp  epoch.inl  exceptions.hpp  rng.hpp
CellularAutomata/include/cuda/: cuda.cuh  cuda.inl
CellularAutomata/include/func/: activations.hpp  activations.inl  kernels.hpp  kernels.inl  states.hpp  states.inl
CellularAutomata/source/: CellularAutomata.cpp  activations.cu  backend_base.cpp  kernels.cpp  rng.cpp  states.cpp
CellularAutomata/source/cuda/: backend_cuda.cu
benchmark/: CMakeLists.txt  benchmarks.cpp  benchmarks.cu  plot.py
docs/: Doxyfile  custom_footer.html  doxygen_awesome_header.html  index.md
docs/md/: 02_install.md  03_getstarted.md  index.md
example/: CMakeLists.txt
example/CPU/: CMakeLists.txt
example/CPU/include/: timeit.h
example/CPU/source/: main.cpp
example/CUDA/: CMakeLists.txt  main.cu
example/CUDA/source/: main.cpp  main.cu
example/include/: display.h
example/source/: __main.cpp  display.cpp  main.cpp
include/: activations.h  common.h  display.h  engine.h  kernels.h  states.h
source/: activations.cpp  display.cpp  engine.cpp  kernels.cpp  main.cpp  rng.cpp  states.cpp
tests/: CMakeLists.txt  shared.hpp  tests.cpp  tests.cu  unittest.cpp
